# DesignPatterns

./: README.md
Composite/: CMakeLists.txt
Composite/include/: Chassis.hpp  CompositeEquipment.hpp  Equipment.hpp  Equipment.hpp.gch  FloppyDisk.hpp  FloppyDisk.hpp.gch
Composite/source/: Chassis.cpp  CompositeEquipment.cpp  Equipment.cpp  FloppyDisk.cpp  Main.cpp
Flyweight/: CMakeLists.txt
Flyweight/include/: BTree.hpp  Character.hpp  Column.hpp  Font.hpp  Glyph.hpp  GlyphContext.hpp  GlyphFactory.hpp  Row.hpp  Window.hpp
Flyweight/source/: BTree.cpp  Character.cpp  Column.cpp  Font.cpp  GlyphContext.cpp  GlyphFactory.cpp  Main.cpp  Row.cpp  Window.cpp
Strategy/: CMakeLists.txt
Strategy/include/: ArrayCompositor.hpp  Composition.hpp  Compositor.hpp  SimpleCompositor.hpp  TeXCompositor.hpp
Strategy/source/: ArrayCompositor.cpp  Composition.cpp  Main.cpp  SimpleCompositor.cpp  TeXCompositor.cpp
TODO/AbstractFactory/: CMakeLists.txt
TODO/Decorator/: CMakeLists.txt
TODO/FactoryMethod/: CMakeLists.txt
TODO/Prototype/: CMakeLists.txt
TODO/Singleton/: CMakeLists.txt
